[package]
name = "flowync"
version = "0.1.0"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
edition = "2018"
description = "A simple utility for multithreading a/synchronization"
documentation = "https://docs.rs/flowync"
readme = "README.md"
keywords = ["async", "sync", "std", "multi-thread", "non-blocking"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ar37-rs/flowync"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
